# platsch

./: .gitignore  LICENSE  Makefile.am  README.rst  configure.ac  libplatsch.c  libplatsch.h  meson.build  platsch.c
.github/workflows/: tests.yml
